# hwrt

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
assets/models/: LICENSE.txt  cornell_box.glb
src/: asset.cpp  asset.h  camera.cpp  camera.h  context.cpp  context.h  frame.cpp  frame.h  gui.cpp  gui.h  input.cpp  input.h  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h  scene.cpp  scene.h  tangent.cpp  tangent.h  texture.h  timer.h  window.cpp  window.h
src/shaders/: compile.bat  compile.sh  raytrace.rchit.slang  raytrace.rgen.slang  raytrace.rmiss.slang
src/shaders/slang/: atmosphere.slang  common.h  common.slang  compute.slang  raytrace.rahit.slang  raytrace.rchit.slang  raytrace.rgen.slang  raytrace.rmiss.slang
src/shaders/spirv/: compute.spv  raytrace.rahit.spv  raytrace.rchit.spv  raytrace.rgen.spv  raytrace.rmiss.spv
src/vulkan/: acceleration.cpp  acceleration.h  adapter.cpp  adapter.h  allocator.cpp  allocator.h  buffer.cpp  buffer.h  device.cpp  device.h  encoder.cpp  encoder.h  image.cpp  image.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  sampler.cpp  sampler.h  sbt.cpp  sbt.h  swapchain.cpp  swapchain.h  utils.h
